--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,14 +2,12 @@ name: Deploy to Production
 
 on:
   push:
-    branches: [ main ]
     tags: [ 'v*' ]
 
 jobs:
   build-and-deploy:
     name: Build and Deploy
     runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/v')
 
     steps:
     - name: Checkout code
@@ -30,11 +28,8 @@ jobs:
       with:
         images: ${{ secrets.DOCKER_USERNAME }}/file-tracking-system
         tags: |
-          type=ref,event=branch
-          type=ref,event=pr
           type=semver,pattern={{version}}
           type=semver,pattern={{major}}.{{minor}}
-          type=raw,value=latest,enable={{is_default_branch}}
 
     - name: Build and push Docker image
       uses: docker/build-push-action@v5
@@ -47,19 +42,12 @@ jobs:
         cache-from: type=gha
         cache-to: type=gha,mode=max
 
-    - name: Deploy to Railway
-      if: github.ref == 'refs/heads/main'
-      uses: railwayapp/railway-deploy@v1.1.0
-      with:
-        railway_token: ${{ secrets.RAILWAY_TOKEN }}
-        service: file-tracking-system
-
     - name: Deploy to Render
-      if: startsWith(github.ref, 'refs/tags/v')
       uses: johnbeynon/render-deploy-action@v0.0.8
       with:
         service-id: ${{ secrets.RENDER_SERVICE_ID }}
         api-key: ${{ secrets.RENDER_API_KEY }}
+        image-url: ${{ secrets.DOCKER_USERNAME }}/file-tracking-system:${{ github.ref_name }}
 
     - name: Notify deployment status
       uses: 8398a7/action-slack@v3
