--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,13 +3,23 @@ services:
     build:
       context: .
       dockerfile: Dockerfile.dev
+      args:
+        - NODE_ENV=development
+        - MONGODB_URI=mongodb://filetrackinguser:filetrackingpassword@mongodb:27017/file-tracking-dev
+        - JWT_SECRET=dev-jwt-secret-key-change-in-production
+        - BASE_URL=http://localhost:3000
+        - MAX_FILE_SIZE=104857600 # 100MB
+        - ALLOWED_FILE_TYPES="image/png,image/jpeg,image/jpg,image/gif,image/webp,image/bmp,image/svg+xml,image/tiff,application/pdf,application/msword,application/vnd.openxmlformats-officedocument.wordprocessingml.document,text/plain,application/rtf,video/mp4,video/mpeg,video/quicktime,video/x-msvideo,video/x-ms-wmv,video/webm,video/3gpp,application/vnd.ms-powerpoint,application/vnd.openxmlformats-officedocument.presentationml.presentation,application/vnd.ms-excel,application/vnd.openxmlformats-officedocument.spreadsheetml.sheet,text/csv,application/zip,application/x-rar-compressed,application/x-7z-compressed,application/x-tar,application/gzip,application/octet-stream"
+    working_dir: /app
+    command: pnpm run dev
     ports:
       - "3000:3000"
     environment:
       - NODE_ENV=development
-      - MONGODB_URI=mongodb://Bhatt:bhatt123@mongodb:27017/file-tracking-dev?authSource=file-tracking-dev 
-     # - MONGODB_URI=mongodb://filetrackinguser:filetrackingpassword@mongodb:27017/file-tracking-dev
+      - MONGODB_URI=mongodb://filetrackinguser:filetrackingpassword@mongodb:27017/file-tracking-dev
       - JWT_SECRET=dev-jwt-secret-key-change-in-production
+      - BASE_URL=http://localhost:3000
+      - MAX_FILE_SIZE=104857600 # 100MB
       - ALLOWED_FILE_TYPES="image/png,image/jpeg,image/jpg,image/gif,image/webp,image/bmp,image/svg+xml,image/tiff,application/pdf,application/msword,application/vnd.openxmlformats-officedocument.wordprocessingml.document,text/plain,application/rtf,video/mp4,video/mpeg,video/quicktime,video/x-msvideo,video/x-ms-wmv,video/webm,video/3gpp,application/vnd.ms-powerpoint,application/vnd.openxmlformats-officedocument.presentationml.presentation,application/vnd.ms-excel,application/vnd.openxmlformats-officedocument.spreadsheetml.sheet,text/csv,application/zip,application/x-rar-compressed,application/x-7z-compressed,application/x-tar,application/gzip,application/octet-stream"
     volumes:
       - .:/app
@@ -19,6 +29,8 @@ services:
       - mongodb
     networks:
       - file-tracking-network
+    dns:
+      - 8.8.8.8
 
   mongodb:
     image: mongo:7.0
@@ -32,11 +44,12 @@ services:
     volumes:
       - mongodb_data:/data/db
       - ./scripts/init-mongo.js:/docker-entrypoint-initdb.d/init-mongo.js:ro
+    command: ["--auth"]
     networks:
       - file-tracking-network
 
   mongo-express:
-    image: mongo-express:1.0.2
+    image: mongo-express
     restart: always
     ports:
       - "8081:8081"
@@ -44,9 +57,9 @@ services:
       - ME_CONFIG_MONGODB_ADMINUSERNAME=admin
       - ME_CONFIG_MONGODB_ADMINPASSWORD=password
       - ME_CONFIG_MONGODB_URL=mongodb://admin:password@mongodb:27017/
-      # Secure dashboard with Basic Auth
+      - ME_CONFIG_MONGODB_ENABLE_ADMIN=true
       - ME_CONFIG_BASICAUTH_USERNAME=admin
-      - ME_CONFIG_BASICAUTH_PASSWORD=strongpassword123
+      - ME_CONFIG_BASICAUTH_PASSWORD=password
     depends_on:
       - mongodb
     networks:
