--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,6 +44,7 @@ jobs:
 
     - name: Install dependencies
       run: pnpm install --no-frozen-lockfile
+      run: npm ci
 
     - name: Run ESLint
       run: pnpm run lint
