--- a/package.json
+++ b/package.json
@@ -76,6 +76,8 @@
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "autoprefixer": "^10.4.19",
+    "eslint": "^8.56.0",
+    "eslint-config-next": "^14.1.0",
     "jest": "^29.7.0",
     "mongodb-memory-server": "^9.3.0",
     "postcss": "^8.4.38",
