--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "lint": "next lint",
     "start": "next start",
     "setup:admin": "tsx scripts/setup-admin.js",
-    "test": "jest"
+    "test": "jest",
+    "test:e2e": "playwright test",
+    "type-check": "tsc --noEmit"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.1",
