--- a/package.json
+++ b/package.json
@@ -3,13 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "build": "next build",
     "dev": "next dev",
-    "lint": "next lint",
+    "build": "next build",
     "start": "next start",
-    "setup:admin": "tsx scripts/setup-admin.js",
-    "test": "jest",
+    "lint": "next lint",
+    "test": "jest --runInBand --detectOpenHandles --forceExit",
+    "test:watch": "jest --watch --runInBand",
+    "test:coverage": "jest --coverage --runInBand",
     "test:e2e": "playwright test",
+    "test:e2e:ui": "playwright test --ui",
+    "test:e2e:report": "playwright show-report",
+    "setup:admin": "tsx scripts/setup-admin.js",
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
@@ -69,8 +73,17 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@babel/plugin-transform-modules-commonjs": "^7.27.1",
+    "@babel/plugin-transform-runtime": "^7.28.3",
+    "@babel/preset-env": "^7.28.3",
+    "@babel/preset-typescript": "^7.27.1",
     "@playwright/test": "^1.44.1",
+    "@swc/core": "^1.13.5",
+    "@swc/jest": "^0.2.39",
+    "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.4.5",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
     "@types/bcryptjs": "^2.4.6",
     "@types/jest": "^29.5.12",
     "@types/jsonwebtoken": "^9.0.6",
@@ -78,12 +91,16 @@
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "autoprefixer": "^10.4.19",
+    "bcryptjs": "^2.4.3",
+    "cross-env": "^10.0.0",
     "eslint": "^8.56.0",
     "eslint-config-next": "^14.1.0",
     "jest": "^29.7.0",
-    "mongodb-memory-server": "^9.3.0",
+    "jest-environment-jsdom": "^30.1.2",
+    "mongodb-memory-server": "^9.1.5",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.4",
+    "ts-jest": "^29.4.1",
     "tsx": "^4.15.6",
     "typescript": "^5.4.5"
   },
