--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
     "lucide-react": "^0.395.0",
     "mongodb": "^6.7.0",
     "mongoose": "^8.4.1",
-    "next": "14.2.4",
+    "next": "^14.2.32",
     "next-themes": "^0.3.0",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
