--- a/tsconfig.jest.json
+++ b/tsconfig.jest.json
@@ -1,18 +1,27 @@
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
-    "jsx": "react-jsx",
+    "target": "es2018",
     "module": "commonjs",
-    "esModuleInterop": true,
-    "target": "es2017",
     "moduleResolution": "node",
+    "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     "strict": true,
+    "noEmit": true,
+    "jsx": "react-jsx",
     "baseUrl": ".",
     "paths": {
       "@/*": ["./*"]
     }
   },
-  "exclude": ["node_modules"],
-  "include": ["**/*.ts", "**/*.tsx", "**/*.js", "**/*.jsx"]
+  "include": [
+    "**/*.test.ts",
+    "**/*.test.tsx",
+    "**/*.spec.ts",
+    "**/*.spec.tsx",
+    "jest.setup.js",
+    "jest.global-setup.js",
+    "jest.global-teardown.js"
+  ],
+  "exclude": ["node_modules", ".next"]
 }
