--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test": "jest --runInBand --detectOpenHandles --forceExit",
-    "test:watch": "jest --watch --runInBand",
-    "test:coverage": "jest --coverage --runInBand",
+    "test": "jest --config=jest.config.js",
+    "test:watch": "jest --watch --config=jest.config.js",
+    "test:coverage": "jest --coverage --config=jest.config.js",
     "test:e2e": "playwright test",
     "test:e2e:ui": "playwright test --ui",
     "test:e2e:report": "playwright show-report",
@@ -55,9 +55,10 @@
     "input-otp": "^1.2.4",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.395.0",
-    "mongodb": "^6.7.0",
-    "mongoose": "^8.4.1",
-    "next": "^14.2.32",
+    "mongodb": "^4.6.0",
+    "mongoose": "^7.0.0",
+    "next": "^13.4.0",
+    "next-auth": "^4.22.0",
     "next-themes": "^0.3.0",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
@@ -80,29 +81,29 @@
     "@playwright/test": "^1.44.1",
     "@swc/core": "^1.13.5",
     "@swc/jest": "^0.2.39",
-    "@testing-library/dom": "^10.4.1",
-    "@testing-library/jest-dom": "^6.4.5",
-    "@testing-library/react": "^16.3.0",
-    "@testing-library/user-event": "^14.6.1",
-    "@types/bcryptjs": "^2.4.6",
-    "@types/jest": "^29.5.12",
-    "@types/jsonwebtoken": "^9.0.6",
-    "@types/node": "^20.14.2",
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
-    "autoprefixer": "^10.4.19",
+    "@testing-library/dom": "^9.3.1",
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "^14.0.0",
+    "@types/bcryptjs": "^2.4.2",
+    "@types/jest": "^29.5.0",
+    "@types/mongodb": "^4.0.7",
+    "@types/node": "^20.0.0",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
+    "autoprefixer": "^10.4.0",
     "bcryptjs": "^2.4.3",
     "cross-env": "^10.0.0",
-    "eslint": "^8.56.0",
-    "eslint-config-next": "^14.1.0",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^30.1.2",
-    "mongodb-memory-server": "^9.1.5",
-    "postcss": "^8.4.38",
-    "tailwindcss": "^3.4.4",
-    "ts-jest": "^29.4.1",
-    "tsx": "^4.15.6",
-    "typescript": "^5.4.5"
+    "eslint": "^8.0.0",
+    "eslint-config-next": "13.4.0",
+    "jest": "^29.0.0",
+    "jest-environment-jsdom": "^29.0.0",
+    "mongodb-memory-server": "^8.0.0",
+    "next": "^13.4.0",
+    "postcss": "^8.4.0",
+    "tailwindcss": "^3.3.0",
+    "ts-jest": "^29.0.0",
+    "ts-node": "^10.9.0",
+    "typescript": "^5.0.0"
   },
   "packageManager": "pnpm@10.15.0+sha512.486ebc259d3e999a4e8691ce03b5cac4a71cbeca39372a9b762cb500cfdf0873e2cb16abe3d951b1ee2cf012503f027b98b6584e4df22524e0c7450d9ec7aa7b"
 }
