--- a/package.json
+++ b/package.json
@@ -55,7 +55,6 @@
     "input-otp": "^1.2.4",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.395.0",
-    "mongodb": "^4.6.0",
     "mongoose": "^7.0.0",
     "next": "^13.4.0",
     "next-auth": "^4.22.0",
@@ -67,6 +66,7 @@
     "react-hook-form": "^7.51.5",
     "react-resizable-panels": "^2.0.19",
     "recharts": "^2.12.7",
+    "redis": "^5.8.2",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
@@ -83,10 +83,14 @@
     "@swc/jest": "^0.2.39",
     "@testing-library/dom": "^9.3.1",
     "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^14.0.0",
+    "@testing-library/react": "^14.3.1",
+    "@testing-library/user-event": "^14.6.1",
     "@types/bcryptjs": "^2.4.2",
-    "@types/jest": "^29.5.0",
+    "@types/jest": "^29.5.14",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/mongodb": "^4.0.7",
+    "@types/mongodb-memory-server": "^2.3.0",
+    "@types/next": "^9.0.0",
     "@types/node": "^20.0.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
@@ -95,9 +99,11 @@
     "cross-env": "^10.0.0",
     "eslint": "^8.0.0",
     "eslint-config-next": "13.4.0",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^29.0.0",
     "jest-environment-jsdom": "^29.0.0",
-    "mongodb-memory-server": "^8.0.0",
+    "mongodb": "^4.17.2",
+    "mongodb-memory-server": "^10.2.0",
     "next": "^13.4.0",
     "postcss": "^8.4.0",
     "tailwindcss": "^3.3.0",
