--- a/package.json
+++ b/package.json
@@ -94,6 +94,7 @@
     "@types/node": "^20.0.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
+    "@types/testing-library__user-event": "^4.2.0",
     "autoprefixer": "^10.4.0",
     "bcryptjs": "^2.4.3",
     "cross-env": "^10.0.0",
