--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
+    "dotenv": "^17.2.2",
     "embla-carousel-react": "^8.1.5",
     "geist": "^1.3.0",
     "input-otp": "^1.2.4",
