--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,13 +38,11 @@ jobs:
     - name: Setup Node.js
       uses: actions/setup-node@v4
       with:
-        node-version: '18'
+        node-version: '20'
         cache: 'pnpm'
 
-
     - name: Install dependencies
-      #run: pnpm install --no-frozen-lockfile
-      run: npm ci
+      run: pnpm install --frozen-lockfile
 
     - name: Run ESLint
       run: pnpm run lint
