--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,16 +38,12 @@ jobs:
     - name: Setup Node.js
       uses: actions/setup-node@v4
       with:
-        node-version: '20'
+        node-version: '18'
         cache: 'pnpm'
 
+
     - name: Install dependencies
-      run: |
-        if [ -f pnpm-lock.yaml ]; then
-          pnpm install --frozen-lockfile
-        else
-          pnpm install
-        fi
+      run: pnpm install --no-frozen-lockfile
 
     - name: Run ESLint
       run: pnpm run lint
